--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     background: #000;
     margin: 0;
     padding-top: 53px;
+    color: #fff;
 }
 
 .header {
@@ -31,7 +32,7 @@ body {
     padding-bottom: 2px;
 }
 
-.item::after {
+.item:after {
     content: "";
     width: 0;
     height: 1px;
@@ -42,7 +43,7 @@ body {
     bottom: 0;
 }
 
-.item:hover::after {
+.item:hover:after {
     width: 100%;
 }
 
@@ -61,4 +62,97 @@ body {
 
 .sec-menu .item-link {
     color: #808080;
+}
+
+.main {
+    text-align: center;
+    padding-top: 120px;
+    padding-bottom: 26px;
+}
+
+.title {
+    margin-top: 0;
+    margin-bottom: 26px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 64px;
+    line-height: 75px;
+}
+
+.description {
+    margin: auto;
+    max-width: 268px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 140%;
+    text-transform: lowercase;
+}
+
+.description:after {
+    margin: auto;
+    content: "";
+    display: block;
+    width: 1px;
+    height: 60px;
+    background-color: #FFF;
+    margin-top: 26px;
+}
+
+.video-bg {
+    /* margin-top: 30px; */
+    height: 750px;
+    max-width: 1230px;
+    width: 100%;
+    margin: auto;
+    background-color: #000;
+}
+
+.features {
+    max-width: 1230px;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: start;
+}
+
+.features-title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 140%;
+    text-transform: uppercase;
+    margin-bottom: 45px;
+}
+
+.text-grey {
+    color: #B2B0B2;
+}
+
+.table {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 179.69%;
+    padding-bottom: 206px;
+}
+
+.table td {
+    width: 300px;
+    padding-top: 6px;
+    padding-bottom: 5px;
+}
+
+.features-text {
+    margin-top: 12px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 29px;
+    max-width: 490px;
+}
+
+.rocket {
+    z-index: 2;
+    padding-top: 100px;
 }
