--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ body {
     margin: auto;
     display: flex;
     justify-content: start;
+    align-items: flex-start;
 }
 
 .features-title {
@@ -152,8 +153,114 @@ body {
     max-width: 490px;
 }
 
+.right-col {
+    text-align: center;
+    width: 50%;
+    height: 1200px;
+}
+
 .rocket {
     z-index: 2;
     position: relative;
     padding-top: 100px;
+    height: 1500px;
+}
+
+.footer {
+    max-width: 1230px;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+
+.logo-footer {
+    margin-bottom: 43px;
+}
+
+.social-link {
+    text-decoration: none;
+    margin-right: 20px;
+    color: #fff;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.footer-text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #808080;
+    margin-top: 28px;
+    margin-bottom: 30px;
+}
+
+.contact {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: transparent;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 6px;
+    padding: 19px 86px;
+    margin-bottom: 131px;
+}
+
+@media (max-width: 960px) {
+    .rocket {
+        width: 200px;
+        height: 1200px;
+    }
+    .table {
+        padding-bottom: 100px;
+    }
+}
+
+@media(max-width:768px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header .logo {
+        margin-bottom: 20px;
+    }
+    .header .main-nav {
+        margin-bottom: 20px;
+    }
+    .right-col {
+        width: 30%;
+        height: 900px;
+    }
+    .table {
+        padding-bottom: 40px;
+    }
+    .table td {
+        max-width: 250px;
+    }
+    .video-bg {
+        width: 100%;
+    }
+}
+
+@media (max-width:576px) {
+    .features {
+        flex-direction: column;
+        align-items: center;
+    }
+    .right-col {
+        width: 100%;
+        height: 900px;
+        margin-bottom: 30px;
+    }
+    .rocket {
+        padding: 0;
+        width: 250px;
+        height: 900px;
+    }
 }
